Add note about Java's PermGen in README.md